tratamento de crash em classe de date format